--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -5,7 +5,8 @@ accounts:
   message: "Welcome to EazyBank accounts related Prod APIs"
   contactDetails:
     name: "Reine Aishwarya - Prod Lead"
-    email: "{cipher}qZ9nV1y6Rz3eA8P7WJXxKk4h0mF0Yp5Zx9R8n2sE4Qb6tHc7LwD=="
+    email: "{cipher}qZ9nV1y6Rz3eA8P7WJXxKk4h0mF0Yp5Zx9R8n2sE4Qb6tHc7LwD==
+"
   onCallSupport:
     -(666) 392-4829
     -(236) 203-0384
