--- a/accounts.yml
+++ b/accounts.yml
@@ -5,7 +5,7 @@ accounts:
   message: "Welcome to EazyBank accounts related local APIs"
   contactDetails:
     name: "Yadav Prasad - Developer"
-    email: "john@eazybank.com"
+    email: "yadav@eazybank.com"
   onCallSupport:
     -(555) 555-1234
     -(555) 523-1345
